[tool.poetry]
name = "geoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
scipy = "^1.8"
opencv-python = "^4.8.0.76"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
patchify = "^0.2.3"
split-folders = "^0.5.1"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
